# libmonograph

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac  configure_for_xcode.mk
libmonograph.xcodeproj/: project.pbxproj
src/monograph/: box.c  box.h  canvas.c  canvas.h  graph.c  graph.h  monograph.h  point.c  point.h  rect.c  rect.h  size.c  size.h
test/: all  box_test.c  canvas_test.c  graph_test.c  point_test.c  rect_test.c  size_test.c
test/data/: test1.monograph
